- fix: header, wrapper (z-index)

--- a/src/sass/components/_slider.scss
+++ b/src/sass/components/_slider.scss
@@ -78,6 +78,7 @@
       flex: 1;
       //width: 52vh;
       margin-top: -2rem;
+      z-index: 5;
 
       @include max-min(min toPx($device-tablet + 1)) {
         background: transparent;
