--- a/src/sass/theme/_wrapper.scss
+++ b/src/sass/theme/_wrapper.scss
@@ -1,6 +1,5 @@
 .main-container {
   position: relative;
-  z-index: 4;
   &--wrap {
     max-width: 1920px;
 
